--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "morpheus:build": "node cli/build.mjs"
+    "morpheus:build": "npx tsx cli/build.mjs"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "fs-extra": "^11.3.2",
     "globals": "^16.5.0",
+    "tsx": "^4.20.6",
     "vite": "^7.2.2"
   }
 }
