--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "morpheus:build": "npx tsx cli/build.mjs"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "dexie": "^4.2.1",
     "elkjs": "^0.11.0",
@@ -22,7 +23,8 @@
     "react-intersection-observer-hook": "^4.0.1",
     "react-json-view-lite": "^2.5.0",
     "reactflow": "^11.11.4",
-    "sass": "^1.93.3"
+    "sass": "^1.93.3",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
