--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run morpheus:build && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "morpheus:build": "npx tsx cli/build.mjs"
